--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Hola soy Mateo</h1>
-    <p>Mi amigo es Maksym</p>
+    <p>Mi amigo es Maksym y Ivan Furro</p>
 </body>
 </html>
